<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginModule.Login_otp_verification">

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="bottom|center"
            android:paddingStart="90dp"
            android:paddingEnd="90dp"
            android:text="@string/login_otp_verfication_h1"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="bottom|center"
            android:paddingStart="65dp"
            android:paddingEnd="65dp"
            android:text="@string/login_otp_verfication_sh1"
            android:textColor="@color/subHeadingColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="5.5"
                android:fontFamily="@font/gilroy_medium"
                android:gravity="center|right"
                android:text="@string/login_otp_verfication_sh2"
                android:textColor="@color/subHeadingColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_weight="4.5"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/login_otp_verfication_sh3"
                android:textColor="@color/colorBlack" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_otp_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="40"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_otp_1"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:layout_weight="10"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_otp_edittext"
            android:text="4"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/editText_otp_2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_weight="10"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:background="@drawable/shape_otp_edittext"
            android:hint="-" />

        <EditText
            android:id="@+id/editText_otp_3"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:layout_weight="10"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textSize="24sp"
            android:background="@drawable/shape_otp_edittext"
            android:hint="-" />

        <EditText
            android:id="@+id/editText_otp_4"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:layout_weight="10"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textSize="24sp"
            android:background="@drawable/shape_otp_edittext"
            android:hint="-" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_resend_otp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorLinkText"
        android:layout_width="0dp"
        android:fontFamily="@font/gilroy_semibold"
        android:layout_height="25dp"
        android:paddingEnd="32dp"
        android:textSize="14sp"
        android:layout_marginStart="4dp"
        android:text="@string/login_otp_verfication_resend"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_otp_edittext"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_otp_edittext"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_otp_edittext"/>

    <TextView
        android:id="@+id/textView_didnot_receive_otp"
        android:textColor="@color/colorLinkText"
        android:layout_width="wrap_content"
        android:fontFamily="@font/gilroy_semibold"
        android:layout_height="25dp"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_otp_verfication_didnot_receive_otp"
        app:layout_constraintStart_toStartOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="@+id/button_next"
        app:layout_constraintBottom_toTopOf="@+id/button_next"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_extrabold"
        android:backgroundTint="@color/colorLinkText"
        android:text="@string/login_otp_verification_button"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_otp_edittext"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_otp_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>